# Jarvis

./: .coveragerc  .dockerignore  .env.example  .env.template  .gitignore  .mcp.json  .pre-commit-config.yaml  ACHIEVEMENT_100_PERCENT.md  ACHIEVEMENT_UNLOCKED.md  AUDIT_REPORT.md  BEST_PAID_TOOLS.md  BRUTAL_REVIEW.md  CHANGELOG.md  CLAUDE_SWARM_OPTIMIZATION.md  CODING-EXCELLENCE-DETAILS.md  COMPLETE_SELF_EVOLVING_SYSTEM.md  COMPLETE_SYSTEM_SUMMARY.md  CONFIRMED_RSS_FEEDS.md  CONSCIOUSNESS_FIX_DOCUMENTATION.md  CONSCIOUSNESS_QUICKSTART.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS_REPORT.md  DEVELOPMENT.md  Dockerfile  ELITE_AGENT_EVOLUTION.md  ENTERPRISE_ARCHITECTURE.md  ENTERPRISE_COMPLETE.md  ENTERPRISE_UI_FEATURES.md  FEATURE_COMPARISON.md  FINAL_CONFIRMED_RSS_FEEDS.md  FINAL_RSS_AND_YOUTUBE_FEEDS.md  FINAL_RSS_FEEDS.md  FINAL_STATUS.md  FINAL_TEST_REPORT.md  FIX-ALL-ISSUES.py  GCS_IMPLEMENTATION_SUMMARY.md  GCS_SETUP_GUIDE.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_GUIDE.md  (+356 more)
JARVIS-KNOWLEDGE/: COMPONENT-MAP.md  CONVERSATION-ANALYSIS.md  CURRENT-STATE.md  EVOLUTION-LOG.md  JARVIS-MASTER-CONTEXT.md  MEMORY-SOLUTIONS-COMPARISON.md  SESSION-TEMPLATE.md  SETUP-COMPLETE.md  analyze_conversations.py  view_knowledge.sh
config/: default.json  development.json  jarvis.yaml  multi_ai_config.json  production.json  production_config.py
core/: __init__.py  advanced_integration.py  advanced_self_optimizer.py  agent_registry.py  architecture_evolver.py  assistant.py  ast_analyzer.py  autonomous_project_engine.py  autonomous_tool_factory.py  calendar_email_ai.py  cloud_scale_autonomy_enhanced.py  code_generator_agent.py  code_improver.py  compatibility.py  config.py  config_manager.py  configuration.py  consciousness_extensions.py  consciousness_jarvis.py  consciousness_simulation.py  consciousness_v2.py  context_persistence_manager.py  contract_net_protocol.py  conversational_memory.py  database.py  elite_proactive_assistant.py  elite_proactive_assistant_v2.py  emotional_continuity.py  emotional_intelligence.py  enhanced_episodic_memory.py  enhanced_privacy_learning.py  fluid_state_management.py  fusion_improvements.py  fusion_scenarios.py  gcs_storage.py  health_checks.py  health_monitoring.py  intelligent_cache.py  jarvis_enhanced_core.py  jarvis_enhanced_integration.py  (+80 more)
docs/: ACP_vs_MCP_COMPARISON.md  CLAUDE_ACP_INSPIRED_UNIFICATION.md  CLAUDE_UNIFICATION_GUIDE.md  MCP_CLAUDE_CODE_SETUP.md  MULTI_CLAUDE_ORCHESTRATION.md  PHASE12_INTEGRATION_GUIDE.md  PHASE1_INTEGRATION_GUIDE.md  PHASE3_INTEGRATION_GUIDE.md  engine-documentation.md  fusion_proactive_integration.md  launcher_migration_guide.md  llm_research_guide.md  neural_resource_improvements.md  neural_resource_manager.md  neural_resource_visualization.html  quantum_swarm_optimization.md  ray_decorator_fix.md  self_healing_improvements.md
examples/: example-implementation.py  quantum_swarm_examples.py
handoff/: README.md
jarvis-clean/: main.py
jarvis-triage-audit/: audit-checklist.md  audit-script.sh  audit-visualization.py  executive-summary.md  fix-issues.sh  run-complete-audit.sh
jarvis-triage-scripts/: docker-compose.yml  execute-triage.sh  orchestration-dashboard.md  phase-0-backup.sh  phase-1-analyze.sh  phase-2-git-cleanup.sh  phase-3-restructure.sh  phase-4-poetry-setup.sh  phase-5-cicd.yml  phase-6-config.py  phase-7-docs.sh  phase-9-verify.sh
jarvis-ui/: VOICE_STREAMING_SETUP.md  package-lock.json  package.json  server.js  tailwind.config.ts
jarvis-world-class-ui/: package.json  tailwind.config.js
mcp_servers/: MEMORY-QUICK-REFERENCE.md  compare_memory_solutions.py  jarvis_mcp.py  jarvis_mcp_original.py  jarvis_memory_storage_mcp.py
mobile_app/: README.md  jarvis_mobile_api.py  launch_mobile_api.sh
monitoring/: performance_dashboard.py
orchestrator/: simple_orchestrator.py
phase11-integration/: PHASE11_COMPLETE.md  PHASE11_INTEGRATION_GUIDE.md  README.md  deploy_phase11.sh  launch_phase11.py  phase11_dashboard.html  production_config.py  quick_start.sh  system_integration_orchestrator.py  test_phase11_integration.py
phase2/: PHASE2_COMPLETE.md  PHASE2_INTEGRATION_GUIDE.md  context_persistence.py  jarvis_phase2_core.py  launch_phase2_demo.py  predictive_preloading.py  quick_test_phase2.py  temporal_processing.py  test_phase2.py  vision_processing.py
phase8/: __init__.py  cognitive_load_reducer.py  intervention_preview_system.py  jarvis-ux-dashboard.html  launch_phase8.py  phase8_integration.py  run_phase8.sh  visual_state_indicator.py
phase9/: PHASE9_COMPLETE.md  (+8 more)
(+354 files in other folders)
